jump to content and other fixes

--- a/css/style.css
+++ b/css/style.css
@@ -90,16 +90,47 @@ button.btn{             /*Why couldn't I just use button?*/
 .parallax {
   color: white;
   font-family: 'Vibur', cursive;
-  font-size: 30vw;
+  font-size: 50vh;
   /* The image used */
   background-image: url('../images/craterlake.jpg');
 
   /* Full height */
-  height: 100vw;
+  height: 100vh;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.about {
+  height: 100vh;
+}
+
+/* media queries */
+@media screen and (min-width:800px){
+
+}
+/* media query for reduced animation */
+@media screen and (prefers-reduced-motion: reduce){
+  html{
+      scroll-behavior: auto; /* Removes scroll animation */
+  }
+
+  .skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    position: absolute;
+    top: -40px;
+    -webkit-transition: none; /* Your code here - set to default setting */
+    transition: none;
+    z-index: 1;
+  }
+
+  .skip a:focus{
+    -webkit-transition: none;
+    transition: none;
+    top:0;
+  }
 }
